--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
                 </h2>
                 <div class="aside-content">
                     <div>  
-                        <i class="fa fa-envelope"></i><a class="whitelink" href="mailto:hermanhgy@gmail.com"> hermanhgy@gmail.com </a>
+                        <i class="fa fa-envelope"></i><a class="whitelink" href="mailto:cloud.heng@mail.mcgill.ca"> cloud.heng@mail.mcgill.ca </a>
                     </div>
                     <div>
-                        <a href="https://web.facebook.com/herman.heng1" data-toggle="tooltip" data-placement="top" title="Facebook"><img src="icon/facebook.png" class="social-media-home"></a>
+                        <!-- <a href="https://web.facebook.com/herman.heng1" data-toggle="tooltip" data-placement="top" title="Facebook"><img src="icon/facebook.png" class="social-media-home"></a> -->
                         <a href="https://www.linkedin.com/in/herman-heng-b5a08292/" data-toggle="tooltip" data-placement="top" title="Linkedin"><img src="icon/linkedin.png" class="social-media-home"></a>
-                        <a href="https://www.instagram.com/cdcloud/" data-toggle="tooltip" data-placement="top" title="Instagram"><img src="icon/instagram.png" class="social-media-home"></a>
+                        <!-- <a href="https://www.instagram.com/cdcloud/" data-toggle="tooltip" data-placement="top" title="Instagram"><img src="icon/instagram.png" class="social-media-home"></a> -->
                         <a href="https://scholar.google.com/citations?user=-PfuakYAAAAJ&hl=en" data-toggle="tooltip" data-placement="top" title="Google Scholar"><img src="icon/GS2.png" class="social-media-home"></a>
                         <a href="https://join.skype.com/invite/rkkjw5ggin8z" data-toggle="tooltip" data-placement="top" title="Skype"><img src="icon/skype.jpg" class="social-media-home"></a>
-                        <a href="https://www.couchsurfing.com/people/herman-heng-1" data-toggle="tooltip" data-placement="top" title="Couchsurfing"><img src="icon/CS.png" class="social-media-home"></a>       
+                        <!-- <a href="https://www.couchsurfing.com/people/herman-heng-1" data-toggle="tooltip" data-placement="top" title="Couchsurfing"><img src="icon/CS.png" class="social-media-home"></a>        -->
                     </div>
                     <div>
                         <a href="../professional/GCE.html"><img src="icon/GCE_Badges_02.png" width="100%"></a>
@@ -201,7 +201,7 @@
             </h1>
             <hr>
             <p>
-                Hi there, welcome to this page. I am Cloud, a youth who is inspired to make the world a better place to live. Like clouds in the sky, I will not be stagnant! In this fast-changing world, I am committed to continuous development in different areas to equip myself with new knowledge so that I can keep challenging myself to create innovative solutions to solve problems in my community. I embrace travelling to different corners of the world, connecting with various people internationally, and promoting diversity by integrating myself with different cultures. 
+                Hi there, and welcome to this page! I am Cloud, a person driven by the inspiration to make the world a better place. Cloud isn’t just a translation of my Chinese name - it also reflects my personality. Like the clouds in the sky, I refuse to remain stagnant! In this fast-changing world, I am committed to continuous growth across different fields, equipping myself with new knowledge to challenge myself and develop innovative solutions that benefit my community. I have a deep passion for traveling, connecting with people across cultures, and embracing diversity by immersing myself in different traditions and experiences.
             </p>
 
             <h3>
@@ -210,7 +210,7 @@
             <hr>
             
             <div class="alert alert-info" role="alert", style="margin: 15px 15px 15px 15px;">
-                I strive to utilize my engineering expertise to promote sustainable development globally. It is my responsibility, as part of the consumers of the Earth's resources, to contribute towards the solutions of shaping a low-carbon environment and address the issue of climate change. In my community, I aim to establish an inclusive environment where people can be integrated and empowered regardless of their demographic backgrounds. I aspire to grow myself as a dedicated mentor, educator, and motivator, guiding more young people to discover their values and strengths, and I intend to create platforms that utlitize their talents and help them achieve their full potential. Teaching is my passion, and I aim to develop more innovative strategies to cultivate students' interest in engineering learning. To accomplish my mission, I am committed to continuous professional development while welcoming feedback. 
+                I strive to utilize my science and engineering expertise to promote sustainable development globally. It is my responsibility, as part of the consumers of the Earth's resources, to contribute towards the solutions of shaping a low-carbon environment and address the issue of climate change. In my community, I aim to establish an inclusive environment where people can be integrated and empowered regardless of their demographic backgrounds. I aspire to grow myself as a dedicated mentor, educator, and motivator, guiding more young people to discover their values and strengths, and I intend to create platforms that utlitize their talents and help them achieve their full potential. Teaching is my passion, and I aim to develop more innovative strategies to cultivate students' interest in engineering learning. To accomplish my mission, I am committed to continuous professional development while welcoming feedback. 
             </div>
 
             <p id="explore">Explore what I have been doing to achieve my mission statement by clicking different subject areas below:</p>
@@ -266,7 +266,7 @@
             </h3>
             <hr>
             <p>
-                It is my aspiration to connect with more people across the world. I value social mobilization and welcome feedback from people of various backgrounds. I embrace exchanging ideas on how to make the world a better place to live. If you think we are sharing the same values, it will be my pleasure to connect with you. If you are considering pursuing an engineering degree, please refer to <a href="../education/engineering.html">this page</a>. I can be reached at <a href="mailto:hermanhgy@gmail.com">hermanhgy@gmail.com</a> or via any social media at your wish published on this home page. I look forward to connecting with you. 
+                It is my aspiration to connect with more people across the world. I value social mobilization and welcome feedback from people of various backgrounds. I embrace exchanging ideas on how to make the world a better place to live. If you think we are sharing the same values, it will be my pleasure to connect with you. If you are considering pursuing an engineering degree, please refer to <a href="../education/engineering.html">this page</a>. I can be reached at <a href="mailto:cloud.heng@mail.mcgill.ca">cloud.heng@mail.mcgill.ca</a> or via any social media at your wish published on this home page. I look forward to connecting with you. 
             </p>  
             
             <!-- <p id = "small_caption"><i>Icons on this page was made by 
