--- a/education/PhD.html
+++ b/education/PhD.html
@@ -156,7 +156,7 @@
                     <div class="col-md-2"></div>
                     <div class="col-md-8">
                         <img src="../education/image/SiliconFlames.png" width="100%">
-                        Stabilized silicon flames at various concentrations using a green laser diagnostic for particle image velocimetry (PIV) to investigate flame speed.
+                        Stabilized silicon flames on a self-developed burner at various concentrations, captured with the same camera exposure. The flames are diagnosed using a green laser for particle image velocimetry (PIV) to investigate burning velocity.
                     </div>
                     <div class="col-md-2"></div>
                 </div>
