--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                         <a href="https://join.skype.com/invite/rkkjw5ggin8z" data-toggle="tooltip" data-placement="top" title="Skype"><img src="icon/skype.jpg" class="social-media-home"></a>
                         <!-- <a href="https://www.couchsurfing.com/people/herman-heng-1" data-toggle="tooltip" data-placement="top" title="Couchsurfing"><img src="icon/CS.png" class="social-media-home"></a>        -->
                     </div>
-                    <div>
+                    <!-- <div>
                         <a href="../professional/GCE.html"><img src="icon/GCE_Badges_02.png" width="100%"></a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
 
