--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4">
-                        <a href="education/MSc.html"> <button class="homebutton">
+                        <a href="education/PhD.html"> <button class="homebutton">
                             <img src="icon/education3.png" width="100" height="100">
                             <h4>Education & Research</h4>
                         </button></a>
