--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             </h1>
             <hr>
             <p>
-                Hi there, and welcome to this page! I am Cloud, a person driven by the inspiration to make the world a better place. Cloud isn’t just a translation of my Chinese name - it also reflects my personality. Like the clouds in the sky, I refuse to remain stagnant! In this fast-changing world, I am committed to continuous growth across different fields, equipping myself with new knowledge to challenge myself and develop innovative solutions that benefit my community. I have a deep passion for traveling, connecting with people across cultures, and embracing diversity by immersing myself in different traditions and experiences.
+                Hi there, and welcome to this page! I am Cloud, a person driven by the inspiration to make the world a better place. Cloud isn’t just a translation of my Chinese name, it also reflects my personality. Like the clouds in the sky, I do not remain stagnant! In this fast-changing world, I am committed to continuous growth across different fields, equipping myself with new knowledge to challenge myself and develop innovative solutions that benefit my community. I have a deep passion for traveling, connecting with people across cultures, and embracing diversity by immersing myself in different traditions and experiences.
             </p>
 
             <h3>
