--- a/teaching/layout.html
+++ b/teaching/layout.html
@@ -23,12 +23,12 @@
                 <i class="fa fa-envelope"></i><a class="whitelink" href="mailto:hermanhgy@gmail.com"> hermanhgy@gmail.com </a>
             </div>
             <div>
-                <a href="https://web.facebook.com/herman.heng1" data-toggle="tooltip" data-placement="top" title="Facebook"><img src="../icon/facebook.png" class="social-media"></a>
+                <!-- <a href="https://web.facebook.com/herman.heng1" data-toggle="tooltip" data-placement="top" title="Facebook"><img src="../icon/facebook.png" class="social-media"></a> -->
                 <a href="https://www.linkedin.com/in/herman-heng-b5a08292/" data-toggle="tooltip" data-placement="top" title="Linkedin"><img src="../icon/linkedin.png" class="social-media"></a>
-                <a href="https://www.instagram.com/cdcloud/" data-toggle="tooltip" data-placement="top" title="Instagram"><img src="../icon/instagram.png" class="social-media"></a>
+                <!-- <a href="https://www.instagram.com/cdcloud/" data-toggle="tooltip" data-placement="top" title="Instagram"><img src="../icon/instagram.png" class="social-media"></a> -->
                 <a href="https://scholar.google.com/citations?user=-PfuakYAAAAJ&hl=en" data-toggle="tooltip" data-placement="top" title="Google Scholar"><img src="../icon/GS2.png" class="social-media"></a>
                 <a href="https://join.skype.com/invite/q9DVUC38d92R" data-toggle="tooltip" data-placement="top" title="Skype"><img src="../icon/skype.jpg" class="social-media"></a>
-                <a href="https://www.couchsurfing.com/people/herman-heng-1" data-toggle="tooltip" data-placement="top" title="Couchsurfing"><img src="../icon/CS.png" class="social-media"></a>   
+                <!-- <a href="https://www.couchsurfing.com/people/herman-heng-1" data-toggle="tooltip" data-placement="top" title="Couchsurfing"><img src="../icon/CS.png" class="social-media"></a>    -->
             </div>
         </div>
         <hr style="margin-bottom: 5px;">
@@ -60,7 +60,7 @@
                 <div class="collapse" id="navbarToggleExternalContent">
                     <div class="aside-content">
                         <ul class="nobull">
-                            <li><a class="whitelink" href="../teaching/philosophy.html"> Teaching Statement</a></li>
+                            <!-- <li><a class="whitelink" href="../teaching/philosophy.html"> Teaching Statement</a></li> -->
                             <li><a class="whitelink" href="../teaching/f3.html"> Fluid Mechanics Lab</a></li>
                             <li><a class="whitelink" href="../teaching/thermo.html"> Thermodynamics</a></li>
                             <li><a class="whitelink" href="../teaching/imas.html">Mathematics</a></li>
