--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                         </button></a>
                     </div>
                     <div class="col-md-4">
-                        <a href="teaching/philosophy.html"> <button class="homebutton">
+                        <a href="teaching/experience.html"> <button class="homebutton">
                             <img src="icon/teaching2.png" width="100" height="100">
                             <h4>Teaching & Mentorship</h4>
                         </button></a>
