--- a/teaching/layout.html
+++ b/teaching/layout.html
@@ -61,6 +61,7 @@
                     <div class="aside-content">
                         <ul class="nobull">
                             <!-- <li><a class="whitelink" href="../teaching/philosophy.html"> Teaching Statement</a></li> -->
+                            <li><a class="whitelink" href="../teaching/experience.html"> My Teaching Experience</a></li>
                             <li><a class="whitelink" href="../teaching/f3.html"> Fluid Mechanics Lab</a></li>
                             <li><a class="whitelink" href="../teaching/thermo.html"> Thermodynamics</a></li>
                             <li><a class="whitelink" href="../teaching/imas.html">Mathematics</a></li>
