--- a/teaching/experience.html
+++ b/teaching/experience.html
@@ -77,43 +77,16 @@
                 The pie chart below shows the performance from the students who had at least 80% of attendance to my tutorial program. Their results were graded by their respective instructors of their sections. As shown from the pie chart, 76% of my students with strong attendance records have obtained A- grade and above. 
             </p>
             
-            <div class="big-screen-image image">
-                <img src="../teaching/image/thermo.PNG" width="40%">
-            </div>
-
-            <div class="small-screen-image image">
-                <img src="../teaching/image/thermo.PNG" width="80%">
+            <p>
+                My teaching evaluation report at McGill University is shown below: 
+            </p>
+            <div class="paragraph">  
+                <a class="float-right text-right" href="../pdf/My Teaching Philosophy Statement.pdf" target="_blank">
+                    Open in new window <i class="fa">&#xf08e;</i>
+                </a>
+                <embed src="../pdf/My Teaching Philosophy Statement.pdf" width="100%" height="600">
             </div>
             
-            <h3>
-                My Evaluation for This Tutorial 
-            </h3>
-            <hr>
-
-            <div class="paragraph">
-                <span class="c">Planning & Preparation</span>: &emsp; 4.8 / 5.0<br>
-                <span class="c">Classroom Management</span>: &emsp; 4.7 / 5.0 <br>
-                <span class="c">Instruction</span>: &emsp; 4.8 / 5.0 <br>
-                <span class="c">Professional Responsibilities</span>: &emsp; 4.7 / 5.0 <br>
-                <span class="c">Overall Score</span>: &emsp; <b>4.7 / 5.0</b> <br>
-            </div>
-
-            <style>
-                .c {display: inline-block; width: 220px;}
-            </style>
-
-            <h6>
-                Students' Comments:
-            </h6>
-            <ul>
-                <li>The tutor knows how to teach a student by explaining at the student level and knows where to focus more.</li>
-                <li>Tutor's explanation is very good. The classes should be carried out more often. Thank you for everything.</li>
-                <li>The tutor gives the basic information and he explains it clearly and very helpful. This class is very helpful. Keep it up. I believe it will be very useful for juniors.</li>
-                <li>This tutorial class really help me improve my knowledge in Thermodynamics 1.</li>
-                <li>The tutor greatly assisted me in better understanding on the subject.</li>
-                <li>Very thorough in lessons, help simplify concepts that would be hard to grasp in classes, provides guidance in the learning of the course in a well manner.</li>
-                <li>This class is extremely helpful, and should be done for all subjects if possible</li>
-            </ul>
             <p class="enter"></p>
 
         </main>
