--- a/teaching/experience.html
+++ b/teaching/experience.html
@@ -74,17 +74,20 @@
             </h3>
             <hr>
             <p>
-                The pie chart below shows the performance from the students who had at least 80% of attendance to my tutorial program. Their results were graded by their respective instructors of their sections. As shown from the pie chart, 76% of my students with strong attendance records have obtained A- grade and above. 
+                I do not see students as “the least experienced group”. In fact, I believe they are the backbone of education as they have the abilities to view things from different angles, introduce fresh ideas, foster innovation, and incorporate creativity. I strike to empower vulnerable young students in my classrooms and help them discover their full potential such that they can see themselves as valuable assets in their future organizations. As an educator, I believe that it is also important to demonstrate my personal vulnerability to students by seeking their opinions, learning from them, and acknowledging things that are outside of my expertise. 
             </p>
-            
+
+            <h3>
+                My Teaching Evaluation 
+            </h3>
             <p>
                 My teaching evaluation report at McGill University is shown below: 
             </p>
             <div class="paragraph">  
-                <a class="float-right text-right" href="../pdf/My Teaching Philosophy Statement.pdf" target="_blank">
+                <a class="float-right text-right" href="../pdf/Combined Evaluation Report.pdf" target="_blank">
                     Open in new window <i class="fa">&#xf08e;</i>
                 </a>
-                <embed src="../pdf/My Teaching Philosophy Statement.pdf" width="100%" height="600">
+                <embed src="../pdf/Combined Evaluation Report.pdf" width="100%" height="600">
             </div>
             
             <p class="enter"></p>
