--- a/teaching/experience.html
+++ b/teaching/experience.html
@@ -42,32 +42,24 @@
             <hr>
 
             <p>
-                I possess vast experience in teaching from high school to the university level, from online/remote teaching to in person teaching, from small-class teaching to large-class teaching.   
+                I have extensive teaching experience across various educational levels, from high school to university, in both online/remote and in-person settings, and in small and large classroom environments.
             </p> 
-            <p> 
-                Under this program, I was teaching the subject of thermodynamics, and other subjects were led by other volunteers. There were about 60 students, who took thermodynamics with different instructors on campus, participated in my weekly tutorial classes.
+
+            <p>
+                I served as a tutor for the Institution of Mechanical Engineers (IMechE), teaching thermodynamics to about 60 students from various engineering departments while still pursuing my undergraduate degree.
             </p>
-            <div class="container">
-                <div class="row">
-                <div class="col-md">
-                    <button class="btn btn-block accordion_butt" type="button" data-toggle="collapse" 
-                    data-target="#collapseExample_F" aria-expanded="false" aria-controls="collapseExample">
-                        Click here to read my certificate for this tutorial
-                    </button>
-                </div>
-                </div>
-                <div class="row">
-                <div class="col-md">
-                <div class="collapse" id="collapseExample_F">
-                    <div class="card card-body accordion_cont">
-                        <div>
-                            <img src="../teaching/image/2014-02 Engineering Tutoring Experience-page-001.jpg" alt="Imeche tutor" width="70%">
-                        </div>      
-                    </div>
-                </div>
-            </div>      
-            </div>
-            </div>
+
+            <p>
+                At the University of Saskatchewan, I worked as a lab demonstrator for the Fluid Mechanics Lab, guiding students on how to use a wind tunnel to study boundary layer behavior and a wind turbine to analyze energy conversion and efficiency. Additionally, I was a teaching assistant for Engineering Mechanics I (Introduction to Statics), Mechanical Design, and Industrial Design Project, where students tackled real-world engineering problems provided by engineering companies in Saskatoon.
+            </p>
+
+            <p>
+                At McGill University, I conducted lab courses in heat transfer, thermodynamics, and fluid mechanics. I guided students in using various pieces of equipment, including a two-stage compressor, a wind tunnel, a piping network, a heat exchanger, and more, to help them understand fundamental engineering concepts. I also worked as a teaching assistant for heat transfer and thermodynamics, leading weekly tutorial sessions and providing consultation hours and revision sessions to support students outside of regular class hours.
+            </p>
+
+            <p>
+                I strive to channel my enthusiasm for engineering to inspire students and cultivate their passion for learning. I firmly believe that if students can be influenced by my passion, they will learn to embrace challenges rather than seek ways to avoid them.
+            </p>
 
             <h3>
                 My Teaching Philosophy 
@@ -75,6 +67,28 @@
             <hr>
             <p>
                 I do not see students as “the least experienced group”. In fact, I believe they are the backbone of education as they have the abilities to view things from different angles, introduce fresh ideas, foster innovation, and incorporate creativity. I strike to empower vulnerable young students in my classrooms and help them discover their full potential such that they can see themselves as valuable assets in their future organizations. As an educator, I believe that it is also important to demonstrate my personal vulnerability to students by seeking their opinions, learning from them, and acknowledging things that are outside of my expertise. 
+            </p>
+
+            <h3>
+                My Teaching Training
+            </h3>
+            <p>
+                As of today, I have successfully completed at least three major semester-long training programs relevant to teaching during my graduate studies.
+                <ul>
+                    <li>
+                        <a href="../professional/GPS989.html">Philosophy and Practice of University Teaching</a> (two semesters):  
+                        Analyzed my teaching and learning approach, designed diverse teaching and learning strategies to foster intercultural awareness and inclusivity, and developed my own teaching philosophy.  
+                    </li>
+                    <li>
+                        Instructional Design in Engineering Education** (one semester):  
+                        Wrote course outlines and learning outcomes based on Canadian Engineering Accreditation Board (CEAB) Graduate Attributes, engaged in self-reflective teaching practice, developed assessment strategies, and designed an engineering course.  
+                    </li>
+                    <li>
+                        <a href=".../professional/GPS974.html">Graduate Professional Skills Certificate</a> (one semester):  
+                        Created a personal portfolio including a mission statement, learning objectives, and plans to achieve the mission, along with reflective professional skills development. The course was also designed to foster critical thinking skills. 
+                    </li>
+                </ul>
+                
             </p>
 
             <h3>
