--- a/education/PhD.html
+++ b/education/PhD.html
@@ -139,7 +139,7 @@
                     <div class="col-md-2"></div>
                     <div class="col-md-8">
                         <img src="../education/image/MetalFuelCycle.png" width="100%">
-                        Metal Fuel Cycle: (1) Conversion of renewable energy (e.g. solar, wind) into electrical energy for metal reduction; (2) Reduction of metal oxides where electrical energy is converted into chemical energy stored in the metal; (3) The stored energy in metal fuels can be transported to various locations (energy carriers); (4) Burning metal on demand releases the stored chemical energy as heat; (5) Metal combustion products are solid and can be captured; (6) The captured metal oxides can be transported back for reduction to be reused in a closed sustainable loop.  
+                        <small>Metal Fuel Cycle: (1) Conversion of renewable energy (e.g. solar, wind) into electrical energy for metal reduction; (2) Reduction of metal oxides where electrical energy is converted into chemical energy stored in the metal; (3) The stored energy in metal fuels can be transported to various locations (energy carriers); (4) Burning metal on demand releases the stored chemical energy as heat; (5) Metal combustion products are solid and can be captured; (6) The captured metal oxides can be transported back for reduction to be reused in a closed sustainable loop.</small>
                     </div>
                     <div class="col-md-2"></div>
                 </div>
