--- a/education/PhD.html
+++ b/education/PhD.html
@@ -126,6 +126,19 @@
                 Think of metal fuels as a "better version of a battery" — a compact, high-energy-density energy carrier. The illustration below shows how aluminum, iron and silicon metals compare to batteries and hydrogen in terms of storage space required (based on their volumetric energy density), demonstrating how much smaller the storage space for metals can be for the same energy output.
             </p>
 
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-2"></div>
+                    <div class="col-md-8">
+                        <img src="../education/image/EnergyDensity.png" width="100%">
+                        Left: Energy density of different energy carriers (adopted from Bergthorson, 2018: <a href="https://doi.org/10.1016/j.pecs.2018.05.001">https://doi.org/10.1016/j.pecs.2018.05.001)</a>. Right: Illustration of volume required to store different energy carriers based on their volumetric energy density, demonstrating metal fuels only require a small storage space.
+                    </div>
+                    <div class="col-md-2"></div>
+                </div>
+            </div>
+
+           
+
             <h3>
                 Metal fuels as energy carriers
             </h3>
