--- a/education/BSc.html
+++ b/education/BSc.html
@@ -459,7 +459,7 @@
                     <div class="col-md-2"></div>
                     <div class="col-md-8">
                         <img src="../education/image/My UNITEN Life.jpg" width="100%">
-                        Left: Energy density of different energy carriers (adopted from Bergthorson, 2018: https://doi.org/10.1016/j.pecs.2018.05.001). Right: Illustration of volume required to store different energy carriers based on their volumetric energy density, demonstrating metal fuels only require a small storage space.
+                        My academic and non-academic life at UNITEN
                     </div>
                     <div class="col-md-2"></div>
                 </div>
