--- a/education/award.html
+++ b/education/award.html
@@ -51,6 +51,36 @@
                         <th>Access the Cert</th>
                     </tr>
                     <tr>
+                        <td>Aug 2024</td>
+                        <td>Distinguished Paper Award for the 40th International Symposium of Combustion</td>
+                        <td>The Combustion Institute</td>
+                        <td><a href="https://www.youtube.com/watch?v=LhCFEYK3Fww" target="_blank">Access</a></a></td>
+                    </tr>
+                    <tr>
+                        <td>Aug 2024</td>
+                        <td>Canada Graduate Scholarships - Michael Smith Foreign Study Supplements</td>
+                        <td>Natural Sciences and Engineering Research Council of Canada </td>
+                        <td>N.A.</a></td>
+                    </tr>
+                    <tr>
+                        <td>Jun 2022</td>
+                        <td>Doctoral Research Scholarship</td>
+                        <td>Fonds de recherche du Qu´ebec – Nature et technologies </td>
+                        <td>N.A.</a></td>
+                    </tr>
+                    <tr>
+                        <td>May 2022</td>
+                        <td>COSPAR Travel Award</td>
+                        <td>Canadian Space Agency </td>
+                        <td>N.A.</a></td>
+                    </tr>
+                    <tr>
+                        <td>Apr 2022</td>
+                        <td>Canada Graduate Scholarships - Doctoral </td>
+                        <td>Natural Sciences and Engineering Research Council of Canada </td>
+                        <td>N.A.</a></td>
+                    </tr>
+                    <tr>
                         <td>Mar 2022</td>
                         <td>Best Project - HtCtW Collaborative Project</td>
                         <td>How to Change the World </td>
