--- a/volunteer/summary.html
+++ b/volunteer/summary.html
@@ -132,6 +132,24 @@
                 <th>Access the cert</th>
             </tr>
             <tr>
+                <td>2023 - 2024</td>
+                <td>McGill Mentor for New Domestic Students</td>
+                <td><a href="https://www.mcgill.ca/cle/peer-programs/new-student-buddy-program">Campus Life & Engagement, McGill University</a></td>
+                <td>N.A.</a></td>
+            </tr>
+            <tr>
+                <td>2023 - 2024</td>
+                <td>McGill Mentor for New International Students</td>
+                <td><a href="https://www.mcgill.ca/internationalstudents/once-here/buddy">International Student Services, McGill University</a></td>
+                <td>N.A.</a></td>
+            </tr>
+            <tr>
+                <td>2022 - 2023</td>
+                <td>Mitacs Mentor for Globalink Research Interns</td>
+                <td><a href="https://www.mitacs.ca/our-programs/globalink-research-internship-students/">Mitacs</a></td>
+                <td>N.A.</a></td>
+            </tr>
+            <tr>
                 <td>2018 - 2019</td>
                 <td>Vice President Student Affairs</td>
                 <td><a href="https://egcc.usask.ca/">Engineering Graduate Community Council</a>, U of S</td>
