--- a/travel/summary.html
+++ b/travel/summary.html
@@ -36,7 +36,7 @@
 
         <main class="col-md right">
             <h1>
-                Why Do I Travel?
+                My Travel Experience
             </h1>
             <hr>
 
@@ -90,12 +90,12 @@
                             Countries I've Visited
                         </h3>
                         <hr>
-                            <p>Mexico, Ireland, <br> France, Brazil, Colombia, Panama, Vatican City, Italy, Germany, Czechia, Poland, Thailand</p>
+                            <p>Mexico, Ireland, <br> Andorra, Austria, Belgium, Brazil, Colombia, Czech Republic, Denmark, France, Germany, Greece, Hungary, Ireland, Italy, Liechtenstein, Luxembourg, Mexico, Monaco, Netherlands, Norway, Panama, Poland, Portugal, Qatar, San Marino, Singapore, Slovakia, Spain, Sweden, Switzerland, Thailand, Turkey, United Arab Emirates, United States, Vatican City State </p>
                         <h3>
                             Countries I've Lived
                         </h3>
                         <hr>
-                            <p>Canada, <br> England, <br> Malaysia</p>
+                            <p>Canada, <br> France, <br> England, <br> Malaysia</p>
 
                     </div>
                 </div>
@@ -105,6 +105,26 @@
                 var slideIndex = 0;
                 showSlides();
             </script>
+
+            <p>
+                Below are the locations I have visited or traveled to before.
+            </p>
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-2"></div>
+                    <div class="col-md-8">
+                        <img src="../travel/image/GoogleMapTravel.png" width="100%">
+                        My travel footprints—marked on Google Maps!
+                    </div>
+                    <div class="col-md-2"></div>
+                </div>
+            </div>
+
+            <h3>
+                Why Do I Travel? 
+            </h3>
+            <hr>
 
             <p>
                 When discussing about travelling, most people could be easily connected to the topic and would likely discuss their dream vacation locations. Travelling can certainly help promote mental health and life balance as we take a break outside of our daily routines. For me, travelling is not just for leisure; I enjoy travelling simply because that is an indirect, yet effective, way to grow myself professionally to meet my mission statement. 
