--- a/hobbies/layout.html
+++ b/hobbies/layout.html
@@ -22,7 +22,7 @@
 
     <div class="aside-content">
         <div>  
-            <i class="fa fa-envelope"></i><a class="whitelink" href="mailto:hermanhgy@gmail.com"> hermanhgy@gmail.com </a>
+            <i class="fa fa-envelope"></i><a class="whitelink" href="mailto:cloud.heng@mail.mcgill.ca"> cloud.heng@mail.mcgill.ca </a>
         </div>
         <div>
             <!-- <a href="https://web.facebook.com/herman.heng1" data-toggle="tooltip" data-placement="top" title="Facebook"><img src="../icon/facebook.png" class="social-media"></a> -->
