--- a/education/engineering.html
+++ b/education/engineering.html
@@ -312,11 +312,11 @@
                 </ul>
             </p>
             <p>
-                Understanding your main driver is important because that reason will keep the level of your motivation if you face any unexpected challenges and obstacles in your future path. It is reasonable to have "big earning" as a motivation, but I suggest not to have this as your sole reason of pursuing any degree. 
+                Understanding your main driving force is essential because it will sustain your motivation when you encounter unexpected challenges and obstacles along your journey. It is perfectly reasonable to be motivated by the prospect of high earnings, but I recommend not making it your sole reason for pursuing a degree. Some people enroll in engineering programs because they believe it will lead to a high-paying job in the future. However, they later discover other lucrative career paths—such as becoming a YouTuber or investing in cryptocurrency—and may start losing interest in engineering. For this reason, I do not recommend choosing engineering primarily for financial gain. Instead, it is important to have a genuine interest in the field, as passion and curiosity will help sustain long-term success and create real impacts.
             </p>
             <div class="image">
                 <img src="image/celebration.jpg" alt="Poster" width=70%>
-                <label>One of my major intention of pursuing engineering work/studies is that I have opportunities of interacting with a wide range of experts from various backgrounds (pilots, surveyors, technicians, traders, etc.). We celebrated important festivals together despite of cultural differences.</label>
+                <label>One of my major intention of pursuing engineering work/studies is that I have opportunities of interacting with a wide range of experts from various backgrounds (pilots, surveyors, technicians, traders, etc.) when I was in the offshore oil and energy industry. We celebrated important festivals together despite of cultural differences.</label>
             </div>
             <p class="enter"></p>
 
