--- a/education/PhD.html
+++ b/education/PhD.html
@@ -36,7 +36,7 @@
 
         <main class="col-md right">
             <h1>
-                <b>Pursuing Ph.D. in Combustion Science of a Novel Fuel</b>
+                <b>Exploring a Novel Fuel: My Ph.D. Journey in Combustion Science</b>
             </h1> 
             <hr>
             <h6>
