--- a/teaching/experience.html
+++ b/teaching/experience.html
@@ -81,7 +81,7 @@
                     </li>
                     <li>
                         Instructional Design in Engineering Education** (one semester):  
-                        Wrote course outlines and learning outcomes based on Canadian Engineering Accreditation Board (CEAB) Graduate Attributes, engaged in self-reflective teaching practice, developed assessment strategies, and designed an engineering course.  
+                        Wrote course outlines based on Canadian Engineering Accreditation Board (CEAB) Graduate Attributes, engaged in self-reflective teaching practice, developed assessment strategies, and designed an engineering course.  
                     </li>
                     <li>
                         <a href=".../professional/GPS974.html">Graduate Professional Skills Certificate</a> (one semester):  
