--- a/volunteer/summary.html
+++ b/volunteer/summary.html
@@ -249,7 +249,7 @@
         Creating platforms for people
     </h6>
     <p>
-        In line with my <a href="../teaching/philosophy.html">teaching philosophy statement</a>, I recognize every person is unique due to their distinct backgrounds. For this reason, each person is expected to have their own unique talents and strengths. Hence, I pledge to utilize community events as platforms to discover different talents in my community and determine how their stengths can be utilized. This is particularly important for young people who are still exploring their own interests and strengths. By giving young people more platforms and opportunities to perform, they identify their values. This can greatly motivate them to invest more efforts and time in growing their strengths. I believe leading youth to discover their values and strengths is the key to reduce criminal activities in my community.  
+        In line with my teaching philosophy, I recognize every person is unique due to their distinct backgrounds. For this reason, each person is expected to have their own unique talents and strengths. Hence, I pledge to utilize community events as platforms to discover different talents in my community and determine how their stengths can be utilized. This is particularly important for young people who are still exploring their own interests and strengths. By giving young people more platforms and opportunities to perform, they identify their values. This can greatly motivate them to invest more efforts and time in growing their strengths. I believe leading youth to discover their values and strengths is the key to reduce criminal activities in my community.  
     </p>
 
     <h6>
