--- a/education/PhD.html
+++ b/education/PhD.html
@@ -131,7 +131,7 @@
                     <div class="col-md-2"></div>
                     <div class="col-md-8">
                         <img src="../education/image/EnergyDensity.png" width="100%">
-                        Left: Energy density of different energy carriers (adopted from Bergthorson, 2018: <a href="https://doi.org/10.1016/j.pecs.2018.05.001">https://doi.org/10.1016/j.pecs.2018.05.001)</a>. Right: Illustration of volume required to store different energy carriers based on their volumetric energy density, demonstrating metal fuels only require a small storage space.
+                        Left: Energy density of different energy carriers (adopted from Bergthorson, 2018: <a href="https://doi.org/10.1016/j.pecs.2018.05.001" target="_blank">https://doi.org/10.1016/j.pecs.2018.05.001)</a>. Right: Illustration of volume required to store different energy carriers based on their volumetric energy density, demonstrating metal fuels only require a small storage space.
                     </div>
                     <div class="col-md-2"></div>
                 </div>
