--- a/teaching/experience.html
+++ b/teaching/experience.html
@@ -46,15 +46,15 @@
             </p> 
 
             <p>
-                I served as a tutor for the Institution of Mechanical Engineers (IMechE), teaching thermodynamics to about 60 students from various engineering departments while still pursuing my undergraduate degree.
+                I served as a tutor for the Institution of Mechanical Engineers (IMechE), teaching <a href=".../teaching/thermodynamics.html">Thermodynamics</a> to about 60 students from various engineering departments while still pursuing my undergraduate degree.
             </p>
 
             <p>
-                At the University of Saskatchewan, I worked as a lab demonstrator for the Fluid Mechanics Lab, guiding students on how to use a wind tunnel to study boundary layer behavior and a wind turbine to analyze energy conversion and efficiency. Additionally, I was a teaching assistant for Engineering Mechanics I (Introduction to Statics), Mechanical Design, and Industrial Design Project, where students tackled real-world engineering problems provided by engineering companies in Saskatoon.
+                At the University of Saskatchewan, I worked as a lab demonstrator for the <a href=".../teaching/f3.html">Fluid Mechanics Lab</a>, guiding students on how to use a wind tunnel to study boundary layer behaviour and a wind turbine to analyze energy conversion and efficiency. Additionally, I was a teaching assistant for Engineering Mechanics I (Introduction to Statics), Mechanical Design, and Industrial Design Project, where students tackled real-world engineering problems provided by engineering companies in Saskatoon.
             </p>
 
             <p>
-                At McGill University, I conducted lab courses in heat transfer, thermodynamics, and fluid mechanics. I guided students in using various pieces of equipment, including a two-stage compressor, a wind tunnel, a piping network, a heat exchanger, and more, to help them understand fundamental engineering concepts. I also worked as a teaching assistant for heat transfer and thermodynamics, leading weekly tutorial sessions and providing consultation hours and revision sessions to support students outside of regular class hours.
+                At McGill University, I conducted lab courses in Heat Transfer, Thermodynamics, and Fluid Mechanics. I guided students in using various pieces of equipment, including a two-stage compressor, a wind tunnel, a piping network, a heat exchanger, and more, to help them understand fundamental engineering concepts. I also worked as a teaching assistant for Heat Transfer and Thermodynamics, leading weekly tutorial sessions and providing consultation hours and revision sessions to support students outside of regular class hours.
             </p>
 
             <p>
